--- a/code/demojsssite/sitecore/config/demojsssite.config
+++ b/code/demojsssite/sitecore/config/demojsssite.config
@@ -66,7 +66,7 @@
       <site patch:before="site[@name='website']"
             inherits="website"
             name="demojsssite"
-            hostName="jssdemositesc.dev.local"
+            hostName="saudiairportdemosc.dev.local"
             rootPath="/sitecore/content/mutlisitetennat/demojsssite"
             startItem="/home"
             database="master" />
