--- a/code/demojsssite/package.json
+++ b/code/demojsssite/package.json
@@ -30,6 +30,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "@sitecore-cloudsdk/events": "^0.4.2",
     "@sitecore-jss/sitecore-jss-nextjs": "~22.6.0",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
