--- a/code/demojsssite/package.json
+++ b/code/demojsssite/package.json
@@ -31,7 +31,10 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@sitecore-cloudsdk/events": "^0.4.2",
+    "@sitecore-jss/sitecore-jss-forms": "^22.6.0",
     "@sitecore-jss/sitecore-jss-nextjs": "~22.6.0",
+    "@sitecore-jss/sitecore-jss-react-forms": "^22.6.0",
+    "axios": "^1.9.0",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "graphql": "~15.8.0",
@@ -90,7 +93,7 @@
     "next:dev": "cross-env NODE_OPTIONS='--inspect' next dev -p 3001",
     "next:start": "next start",
     "scaffold": "ts-node --project tsconfig.scripts.json scripts/scaffold-component/index.ts",
-    "start:connected": "cross-env NODE_ENV=development npm-run-all --serial bootstrap --parallel next:dev start:watch-components",
+    "start:connected": "cross-env-shell NODE_EXTRA_CA_CERTS=C:\\Users\\XYZ\\Documents\\saudi2.cer NODE_ENV=development npm-run-all --serial bootstrap --parallel next:dev start:watch-components",
     "start:production": "cross-env-shell NODE_ENV=production npm-run-all --serial bootstrap next:build next:start",
     "start:watch-components": "ts-node --project tsconfig.scripts.json scripts/generate-component-builder/index.ts --watch"
   }
